Added some information

--- a/client/components/home/home.html
+++ b/client/components/home/home.html
@@ -8,8 +8,43 @@
                 <div class="intro-text">
                     <span class="name">Sebastian Hof</span>
                     <span class="skills">Software Engineer</span>
+
+                    <div><i class="fa fa-map-marker"></i>&nbsp;Nuremberg, Germany</div>
                 </div>
             </div>
         </div>
     </div>
 </header>
+
+<section>
+    <div class="container">
+        <div class="row">
+
+            <div class="col-lg-4">
+                <div class="text-center">
+                    <i class="fa fa-3x fa-pencil"></i>
+
+                    <h3>Design</h3>
+
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="text-center">
+                    <i class="fa fa-3x fa-code"></i>
+
+                    <h3>Development</h3>
+
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="text-center">
+                    <i class="fa fa-3x fa-bar-chart"></i>
+
+                    <h3>Analytics</h3>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
