--- a/client/components/about/about.html
+++ b/client/components/about/about.html
@@ -13,23 +13,45 @@
     </div>
 </header>
 
-<section class="success" id="about">
+<section>
     <div class="container">
         <div class="row">
-            <!--<div class="col-lg-4 col-lg-offset-2">-->
-                <!--<p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete-->
-                    <!--source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy-->
-                    <!--customization.</p>-->
-            <!--</div>-->
-            <!--<div class="col-lg-4">-->
-                <!--<p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or-->
-                    <!--a graphic artist looking to share your projects, this template is the perfect starting point!</p>-->
-            <!--</div>-->
-            <!--<div class="col-lg-8 col-lg-offset-2 text-center">-->
-                <!--<a href="#" class="btn btn-lg btn-outline">-->
-                    <!--<i class="fa fa-download"></i> Download Theme-->
-                <!--</a>-->
-            <!--</div>-->
+
+            <div class="col-lg-4">
+                <div class="text-center">
+                    <i class="fa fa-3x fa-laptop"></i>
+
+                    <h3>Job</h3>
+
+                    <p><strong>Software Engineer and Architect</strong></p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="text-center">
+                    <i class="fa fa-3x fa-graduation-cap"></i>
+
+                    <h3>Education</h3>
+
+                    <p><strong>International Information Systems</strong></p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="text-center">
+                    <i class="fa fa-3x fa-flask"></i>
+
+                    <h3>Research</h3>
+
+                    <p><strong>Process Analytics and Mining</strong></p>
+                </div>
+            </div>
+
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <a href="#" class="btn btn-lg btn-blue">
+                    <i class="fa fa-download"></i> Curriculum Vitae
+                </a>
+            </div>
+
         </div>
     </div>
 </section>
+
