--- a/client/components/contact/contact.html
+++ b/client/components/contact/contact.html
@@ -19,12 +19,12 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                 <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                <form name="sentMessage" id="contactForm" novalidate>
+                <form id="contactForm" name="contactForm" ng-submit="contact.submit(contactForm)">
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Name</label>
-                            <input type="text" class="form-control" placeholder="Name" id="name" required
-                                   data-validation-required-message="Please enter your name.">
+                            <input type="text" class="form-control" placeholder="Name" id="name" name="name" required
+                                   data-validation-required-message="Please enter your name." ng-model="contact.data.name">
 
                             <p class="help-block text-danger"></p>
                         </div>
@@ -32,8 +32,8 @@
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Email Address</label>
-                            <input type="email" class="form-control" placeholder="Email Address" id="email" required
-                                   data-validation-required-message="Please enter your email address.">
+                            <input type="email" class="form-control" placeholder="Email Address" id="email" name="email" required
+                                   data-validation-required-message="Please enter your email address." ng-model="contact.data.email">
 
                             <p class="help-block text-danger"></p>
                         </div>
@@ -41,8 +41,8 @@
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Message</label>
-                            <textarea rows="5" class="form-control" placeholder="Message" id="message" required
-                                      data-validation-required-message="Please enter a message."></textarea>
+                            <textarea rows="5" class="form-control" placeholder="Message" id="message" name="message" required
+                                      data-validation-required-message="Please enter a message." ng-model="contact.data.message"></textarea>
 
                             <p class="help-block text-danger"></p>
                         </div>
@@ -52,7 +52,7 @@
                     <div id="success"></div>
                     <div class="row">
                         <div class="form-group col-xs-12">
-                            <button type="submit" class="btn btn-success btn-lg">Send</button>
+                            <button type="submit" class="btn btn-blue btn-lg">Send</button>
                         </div>
                     </div>
                 </form>
