--- a/client/components/contact/contact.html
+++ b/client/components/contact/contact.html
@@ -17,6 +17,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
+
                 <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                 <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                 <form id="contactForm" name="contactForm" ng-submit="contact.submit(contactForm)">
@@ -51,10 +52,16 @@
 
                     <div id="success"></div>
                     <div class="row">
+
+                        <div class="col-xs-12" ng-if="contact.error">
+                            <div class="alert alert-danger" role="alert">{{ 'CONTACT.ERROR' | translate }}</div>
+                        </div>
+
                         <div class="form-group col-xs-12">
                             <button type="submit" class="btn btn-blue btn-lg">{{ 'CONTACT.SEND' | translate}}</button>
                         </div>
                     </div>
+
                 </form>
             </div>
         </div>
