--- a/client/components/about/about.html
+++ b/client/components/about/about.html
@@ -1,5 +1,5 @@
 <!-- About Section -->
-<header>
+<header class="bg-about">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
