--- a/client/components/contact/contact.html
+++ b/client/components/contact/contact.html
@@ -1,5 +1,5 @@
 <!-- Contact Section -->
-<header>
+<header class="bg-contact">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -55,6 +55,10 @@
 
                         <div class="col-xs-12" ng-if="contact.error">
                             <div class="alert alert-danger" role="alert">{{ 'CONTACT.ERROR' | translate }}</div>
+                        </div>
+
+                        <div class="col-xs-12" ng-if="contact.success">
+                            <div class="alert alert-success" role="alert">{{ 'CONTACT.SUCCESS' | translate }}</div>
                         </div>
 
                         <div class="form-group col-xs-12">
