--- a/client/components/home/home.html
+++ b/client/components/home/home.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<header>
+<header class="bg-home">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
