--- a/client/components/projects/projects.html
+++ b/client/components/projects/projects.html
@@ -1,5 +1,5 @@
 <!-- Portfolio Grid Section -->
-<header>
+<header class="bg-projects">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
