--- a/client/components/projects/projects.html
+++ b/client/components/projects/projects.html
@@ -84,8 +84,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>{{ 'PROJECTS.INBITS' | translate }}</h2>
-
-                        <p>{{ 'PROJECTS.INBITS_TEXT' | translate }}</p>
+                        <br />
+                        <p class="text-justify">{{ 'PROJECTS.INBITS_TEXT' | translate }}</p>
                         <ul class="list-inline item-details">
                             <li>{{'PROJECTS.CLIENT' | translate}}:
                                 <strong>{{ 'PROJECTS.INBITS_CLIENT' | translate }}</strong>
@@ -122,8 +122,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>{{ 'PROJECTS.COCAMA' | translate }}</h2>
-
-                        <p>{{ 'PROJECTS.COCAMA_TEXT' | translate }}</p>
+                        <br />
+                        <p class="text-justify">{{ 'PROJECTS.COCAMA_TEXT' | translate }}</p>
                         <ul class="list-inline item-details">
                             <li>{{'PROJECTS.CLIENT' | translate}}:
                                 <strong>{{ 'PROJECTS.COCAMA_CLIENT' | translate }}</strong>
@@ -160,8 +160,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>{{ 'PROJECTS.SYMBIO' | translate }}</h2>
-
-                        <p>{{ 'PROJECTS.SYMBIO_TEXT' | translate }}</p>
+                        <br />
+                        <p class="text-justify">{{ 'PROJECTS.SYMBIO_TEXT' | translate }}</p>
                         <ul class="list-inline item-details">
                             <li>{{'PROJECTS.CLIENT' | translate}}:
                                 <strong>{{ 'PROJECTS.SYMBIO_CLIENT' | translate }}</strong>
@@ -199,8 +199,8 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>{{ 'PROJECTS.COUBR' | translate }}</h2>
-
-                            <p>{{ 'PROJECTS.COUBR_TEXT' | translate }}</p>
+                            <br />
+                            <p class="text-justify">{{ 'PROJECTS.COUBR_TEXT' | translate }}</p>
                             <ul class="list-inline item-details">
                                 <li>{{'PROJECTS.CLIENT' | translate}}:
                                     <strong>{{ 'PROJECTS.COUBR_CLIENT' | translate }}</strong>
@@ -239,8 +239,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>{{ 'PROJECTS.HOMEPAGE' | translate }}</h2>
-
-                        <p>{{ 'PROJECTS.HOMEPAGE_TEXT' | translate }}</p>
+                        <br />
+                        <p class="text-justify">{{ 'PROJECTS.HOMEPAGE_TEXT' | translate }}</p>
                         <ul class="list-inline item-details">
                             <li>{{'PROJECTS.CLIENT' | translate}}:
                                 <strong>{{ 'PROJECTS.HOMEPAGE_CLIENT' | translate }}</strong>
